# upyr

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  osv-scanner.toml
.codebase-memory/: .gitattributes  artifact.json  graph.db.zst
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_report.yml
.github/workflows/: ci.yml  cloudflare-pages.yml  deploy-site.yml  osv-scanner.yml  pages.yml  publish-crates.yml  release.yml  sbom.yml  security.yml  trivy-fs.yml
assets/sounds/: README.md
assets/sounds/anime/: README.md
crates/upyr-audio/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/upyr-audio/src/: lib.rs  pfxr.rs  prng.rs  voice.rs  wav.rs
crates/upyr-core/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/upyr-core/assets/: triggers.txt
crates/upyr-core/assets/models/: language.ngm
crates/upyr-core/fixtures/: boundary-replay-v1.tsv
crates/upyr-core/fixtures/recall/: english-words-v1.txt  ukrainian-words-v1.txt
crates/upyr-core/src/: auto_correct.rs  auto_correct_synthetic_tests.rs  layout.rs  lib.rs  recall_benchmark.rs  triggers.rs
crates/upyr-core/src/auto_correct/: replay_benchmark.rs
crates/upyr-wasm/: Cargo.toml  README.md  build.rs
crates/upyr-wasm/src/: lib.rs
docs/architecture/: wasm-web-plan.md
docs/articles/: reverse-engineering-punto-switcher.html  reverse-engineering-punto-switcher.md  reverse-engineering-punto-switcher.uk.html
docs/benchmarks/: recall-v1.md  signed-ngram-v1.md
docs/migrations/: linux-ksni-tray.md
packaging/: version.sh
packaging/linux/: package.sh  upyr.desktop
packaging/macos/: Info.plist  Settings-Info.plist  Upyr.icns  build-universal.sh  generate-icon.sh  package.sh  verify-release-tag.sh
packaging/windows/: package.ps1  upyr.iss
site/: app.js  demo.js  features.html  how.html  index.html  keyboard.js  nav-toggle.js  privacy.html  styles.css  upyr-web.js
site/articles/: re-writeup.css  re-writeup.js  reverse-engineering-punto-switcher.html  reverse-engineering-punto-switcher.uk.html
src/: accessibility.rs  app.rs  auto_correct.rs  auto_correct_monitor.rs  auto_correct_synthetic_tests.rs  automation.rs  autostart.rs  clipboard_guard.rs  config.rs  config_watcher.rs  feedback.rs  layout.rs  lib.rs  main.rs  modifier_gesture.rs  settings.rs  system_layout.rs  tray.rs
src/dictionaries/: english.txt  ukrainian.txt
src/feedback/: sound.rs
src/models/: language.ngm
src/settings/: macos.rs
tests/: cli.rs
tools/: build_site_wasm.sh  check_codebase_graph.py  check_privacy.py  check_site_content.py  check_version_sync.py  check_wasm_size.py  generate_clean_holdout.py  generate_event_sound_pack.py  generate_ngram_model.py  generate_releases_page.py  smoke_wasm_node.cjs  test_check_privacy.py  test_check_site_content.py
