[package]
name = "upyr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A privacy-first, cross-platform English-Ukrainian keyboard layout fixer"
license = "MIT"
readme = "README.md"

[[bin]]
name = "upyr"
path = "src/main.rs"

[[bin]]
name = "upyr-background"
path = "src/bin/upyr-background.rs"

[[bin]]
name = "upyr-settings"
path = "src/bin/upyr-settings.rs"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
device_query = "4.0.1"
eframe = { version = "0.32.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
enigo = "0.6.1"
global-hotkey = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
single-instance = "0.3.3"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }
winit = "0.30.12"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
x11-dl = "2.21.0"
xkbcommon = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAlert", "NSApplication", "NSButton", "NSCell", "NSColor", "NSControl", "NSEvent", "NSFont", "NSGraphics", "NSPanel", "NSPasteboard", "NSPasteboardItem", "NSPopUpButton", "NSResponder", "NSSearchField", "NSSound", "NSTabView", "NSTabViewItem", "NSText", "NSTextField", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSData", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_SystemServices", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = "thin"
strip = true
