[workspace]
members = [".", "crates/upyr-audio", "crates/upyr-core", "crates/upyr-wasm"]
default-members = ["."]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/dmytro-yemelianov/upyr"
homepage = "https://upyr.org/"

[workspace.dependencies]
js-sys = "0.3.103"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.126"

[package]
name = "upyr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A privacy-first, cross-platform English-Ukrainian keyboard layout fixer"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
default-run = "upyr"
keywords = ["keyboard", "layout", "ukrainian", "productivity", "accessibility"]
categories = ["command-line-utilities", "internationalization"]
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/THIRD_PARTY_NOTICES.md",
  "/src/**",
  "/tests/**",
]

[[bin]]
name = "upyr"
path = "src/main.rs"

[[bin]]
name = "upyr-background"
path = "src/bin/upyr-background.rs"

[[bin]]
name = "upyr-settings"
path = "src/bin/upyr-settings.rs"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
device_query = "4.0.1"
eframe = { version = "0.32.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "x11"] }
enigo = "0.6.1"
global-hotkey = "0.8.0"
rdev = "0.5.3"
serde.workspace = true
single-instance = "0.3.3"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
upyr-core = { path = "crates/upyr-core", version = "=0.3.0" }
upyr-audio = { path = "crates/upyr-audio", version = "=0.3.0" }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06", "x11"] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.6", default-features = false, features = ["async-io", "blocking"] }
x11-dl = "2.21.0"
xkbcommon = "0.9.0"
zbus = { version = "5.13.2", default-features = false, features = ["async-io", "blocking-api"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAlert", "NSApplication", "NSButton", "NSCell", "NSColor", "NSControl", "NSEvent", "NSFont", "NSGraphics", "NSPanel", "NSPasteboard", "NSPasteboardItem", "NSPopUpButton", "NSResponder", "NSSearchField", "NSSlider", "NSSound", "NSTabView", "NSTabViewItem", "NSText", "NSTextField", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSData", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_SystemServices", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = "thin"
strip = true

# RUSTSEC-2026-0194 / RUSTSEC-2026-0195: crates.io still publishes
# wayland-scanner 0.31.10 with quick-xml 0.39, while upstream master's
# scanner code is no longer compatible with released wayland-client 0.31.14.
# Keep the minimal compatible scanner backport until a patched release lands.
[patch.crates-io]
wayland-scanner = { path = "vendor/wayland-scanner-0.31.10" }
