[package]
name = "upyr-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Dependency-free procedural sound packs for Upyr"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["audio", "sound", "synthesis", "feedback"]
categories = ["multimedia::audio"]
include = [
  "/Cargo.toml",
  "/README.md",
  "/THIRD_PARTY_NOTICES.md",
  "/src/**",
]

[dependencies]
