[package]
name = "upyr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Portable English-Ukrainian layout conversion and correction engine for Upyr"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
