[package]
name = "upyr-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for the portable Upyr correction engine"
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
upyr-core = { path = "../upyr-core" }
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[build-dependencies]
sha2 = "0.11.0"
